--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
             <div class="container">
                 <h2 class="section-title">التوزيع المكاني للمرافق العامة بالقرب من مترو الإسكندرية</h2>
                 <div class="map-container">
-                    <img src="https://res.cloudinary.com/dhlxcif1m/image/upload/v1764012108/f1ks9ihqu0hvexedtsyk.jpg" 
+                    <img src="https://i.top4top.io/p_3659vgh7m1.jpeg" 
                          alt="خريطة توضح التوزيع المكاني للمرافق العامة بالقرب من محطات مترو الإسكندرية" 
                          class="price-image" 
                          style="max-height: 600px; object-fit: contain;">
@@ -764,7 +764,7 @@
             <div class="container">
                 <!-- زر الإعجاب الجديد -->
                 <div class="like-container">
-                    <button id="likeButton" class="like-button">❤</button>
+                    <button id="likeButton" class="like-button">❤️</button>
                     <span id="likeCount" class="like-count">0</span>
                 </div>
                 
