--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
     <script>
         // بيانات فريق العمل مع الأسماء المقدمة
         const teamMembers = [
-            { name: "محمد رجب عبدالرازق إبراهيم", role: "طالب" },
+            { name: "محمد رجب عبدالرازق إبراهيم", role: "programmer+leader+طالب" },
             { name: "محمد احمد محمد السيد", role: "طالب" },
             { name: "مختار ياسر مختار احمد", role: "طالب" },
             { name: "محمد حلمي إبراهيم امين", role: "طالب" },
@@ -808,7 +808,7 @@
             { name: "محمد عنتر جابر عنتر", role: "طالب" },
             { name: "مارتينا مرقص شفيق لاظيم", role: "طالب" },
             { name: "كيرية لطيف فخري حليم", role: "طالب" },
-            { name: "كريمة جابر مراد عطية", role: "طالب" },
+            { name: "كريمة جابر مراد عطية", role: "cartographer+طالب" },
             { name: "يوستينا عماد عدلي لطفي", role: "طالب" },
             { name: "ناردين مجدي عبده نصار", role: "طالب" }
         ];
