--- a/index.html
+++ b/index.html
@@ -676,12 +676,12 @@
             </div>
         </section>
         
-        <!-- قسم Service Area Analysis - القسم الجديد -->
+        <!-- قسم Service Area Analysis - القسم الجديد مع تحديث رابط الصورة -->
         <section id="service-area" class="content-section">
             <div class="container">
                 <h2 class="section-title">Service Area Analysis</h2>
                 <div class="map-container">
-                    <img src="https://res.cloudinary.com/dhlxcif1m/image/upload/v1764196132/qmm4i3ocp57zcm6shhib.jpg" 
+                    <img src="https://g.top4top.io/p_3659scaf71.jpg" 
                          alt="خريطة Service Area Analysis لمترو الإسكندرية" 
                          class="price-image" 
                          style="max-height: 600px; object-fit: contain;">
@@ -693,12 +693,12 @@
             </div>
         </section>
         
-        <!-- قسم التوزيع المكاني للمرافق العامة - تم تحديثه -->
+        <!-- قسم التوزيع المكاني للمرافق العامة - تم تحديثه مع تحديث رابط الصورة -->
         <section id="facilities-distribution" class="content-section">
             <div class="container">
                 <h2 class="section-title">التوزيع المكاني للمرافق العامة بالقرب من مترو الإسكندرية</h2>
                 <div class="map-container">
-                    <img src="https://i.top4top.io/p_3659vgh7m1.jpeg" 
+                    <img src="https://l.top4top.io/p_36590zd1n1.jpg" 
                          alt="خريطة توضح التوزيع المكاني للمرافق العامة بالقرب من محطات مترو الإسكندرية" 
                          class="price-image" 
                          style="max-height: 600px; object-fit: contain;">
@@ -715,7 +715,7 @@
             <div class="container">
                 <h2 class="section-title">تأثير المترو على المرور</h2>
                 <div class="map-container">
-                    <img src="https://res.cloudinary.com/dhlxcif1m/image/upload/v1764012932/ns73pmmvrqvu2cpzckfn.jpg" 
+                    <img src="https://g.top4top.io/p_3659wzjc61.jpg" 
                          alt="خريطة توضح تأثير المترو على المرور" 
                          class="price-image" 
                          style="max-height: 600px; object-fit: contain;">
@@ -796,7 +796,7 @@
     <script>
         // بيانات فريق العمل مع الأسماء المقدمة
         const teamMembers = [
-            { name: "محمد رجب عبدالرازق إبراهيم", role: "programmer+leader+طالب" },
+            { name: "محمد رجب عبدالرازق إبراهيم", role: "طالب+programmer+leader" },
             { name: "محمد احمد محمد السيد", role: "طالب" },
             { name: "مختار ياسر مختار احمد", role: "طالب" },
             { name: "محمد حلمي إبراهيم امين", role: "طالب" },
@@ -808,7 +808,7 @@
             { name: "محمد عنتر جابر عنتر", role: "طالب" },
             { name: "مارتينا مرقص شفيق لاظيم", role: "طالب" },
             { name: "كيرية لطيف فخري حليم", role: "طالب" },
-            { name: "كريمة جابر مراد عطية", role: "cartographer+طالب" },
+            { name: "كريمة جابر مراد عطية", role: "طالب+cartographer" },
             { name: "يوستينا عماد عدلي لطفي", role: "طالب" },
             { name: "ناردين مجدي عبده نصار", role: "طالب" }
         ];
